--- a/src/styles.css
+++ b/src/styles.css
@@ -188,3 +188,22 @@ a {
     text-decoration: none;
     color: #ffffff;
 }
+
+.hamburger {
+    display: none;
+}
+
+@media only screen and (max-width: 1000px) {
+    .hamburger {
+        display: block;
+        border: 0;
+        background-color: transparent;
+        color: #ffffff;
+        font-size: 30px;
+        cursor: pointer;
+    }
+
+    ul {
+        display: none;
+    }
+}
