--- a/src/styles.css
+++ b/src/styles.css
@@ -82,14 +82,14 @@ p {
 
 .hero-area {
     display: flex;
-    height: 100%;
+    height: 100vh;
     justify-content: space-between;
     align-items: center;
 }
 
 .hero-text {
     margin-left: 30px;
-    margin-top: 200px;
+    /* margin-top: 200px; */
 }
 
 .button {
