--- a/src/styles.css
+++ b/src/styles.css
@@ -282,6 +282,8 @@ a:hover {
 
 .thanks {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     text-align: center;
     height: 100vh;
