--- a/src/styles.css
+++ b/src/styles.css
@@ -218,11 +218,12 @@ a:hover {
     display: none;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) { 
     .hamburger {
         display: block;
         border: 0;
         margin: 10px;
+        padding: 0;
         background-color: transparent;
         color: #ffffff;
         font-size: 40px;
@@ -254,7 +255,7 @@ a:hover {
         height: 50px;
         width: 50px;
         /* margin: 20px; */
-        align-self: flex-end;
+        align-self:flex-end;
     }
 }
 
