testing styling on mobile screens for nav bar and logo

--- a/src/styles.css
+++ b/src/styles.css
@@ -247,7 +247,7 @@ a:hover {
 
     nav {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         background-color: #465a63;
     }
 
