added technologies section to portfolio

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,11 @@ section {
     padding: 80px;
 }
 
+.technologies {
+    text-align: center;
+    padding-bottom: 40px;
+}
+
 .sub-section-alt {
     display: flex;
     flex-direction: column;
